--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="script.js" type="module"></script>
-  <script src="parseAPI_data.js" type="module"></script>
+  <!-- <script src="data/parseAPI_data.js" type="module"></script> -->
   <title>Document</title>
 </head>
 <body> 
-  
+
   <div class="main-menu">
     <h1>World Leader Quiz</h1>
     <p>Welcome to World Leader Quiz! Do you know them all? <br> Select a region and click <strong>Play</strong> to start the game</p>
