updated javascript, updated countries format

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="script.js" type="module"></script>
+  <script src="/javascript/script.js" type="module"></script>
+  <script src="/javascript/countries.js" type="module"></script>
   <!-- <script src="data/parseAPI_data.js" type="module"></script> -->
+  
   <title>Document</title>
 </head>
 <body> 
 
+
+
+
+
+    
   <div class="main-menu">
+   
+
     <h1>World Leader Quiz</h1>
     <p>Welcome to World Leader Quiz! Do you know them all? <br> Select a region and click <strong>Play</strong> to start the game</p>
     <button class = "region-btn" id = "asia">Asia</button>
@@ -23,6 +32,9 @@
 
   <div class="card-view">
     <button class="close-btn">X</button>
+    <h1>Test button</h1>
+    <p>when clicked, germany answers should dipslay in console</p>
+    <button class="test">Test</button>
     <h2 class="country-name"><span class="country-flag">🇱🇨</span> Temp - St. Lucia <span class="country-flag">🇱🇨</span>
     </h2>
     <button class="answer" id = btn1>Answer 1</button>
