--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="/javascript/script.js" type="module"></script>
   <script src="/javascript/countries.js" type="module"></script>
   <!-- <script src="data/parseAPI_data.js" type="module"></script> -->
+  <link rel="stylesheet" href="/styles/styles.css">
   
   <title>Document</title>
 </head>
@@ -17,31 +18,31 @@
 
     
   <div class="main-menu">
-    <h1>World Leader Quiz</h1>
-    <p>Welcome to World Leader Quiz! Do you know them all? <br> Select a region and click <strong>Play</strong> to start the game</p>
-    <button class = "region-btn" id = "asia">Asia</button>
-    <button class = "region-btn" id = "europe">Europe</button>
-    <button class = "region-btn" id = "north-america">North and Central America</button>
-    <button class = "region-btn" id = "south-america">South America</button>
-    <button class = "region-btn" id = "middle-east-africa">Middle East and Africa</button>
-    <button class = "region-btn" id = "oceania">Oceania</button>
-    <button class = "play-btn">Play</button>
+      <h1>World Leader Quiz</h1>
+      <p>Welcome to World Leader Quiz! Do you know them all? <br> Select a region and click <strong>Play</strong> to start the game</p>
+      <button class = "region-btn" id = "asia">Asia</button>
+      <button class = "region-btn" id = "europe">Europe</button>
+      <button class = "region-btn" id = "north-america">North and Central America</button>
+      <button class = "region-btn" id = "south-america">South America</button>
+      <button class = "region-btn" id = "middle-east-africa">Middle East and Africa</button>
+      <button class = "region-btn" id = "oceania">Oceania</button>
+      <button class = "play-btn">Play</button>
   </div>
 
   <div class="card-view">
-    <button class="close-btn">X</button>
-    <h2 class="country-name"><span class="country-flag">🇱🇨</span> Temp - St. Lucia <span class="country-flag">🇱🇨</span>
-    </h2>
-    <button class="answer" id = btn1>Answer 1</button>
-    <button class="answer" id = btn2>Answer 2</button>
-    <button class="answer" id = btn3>Answer 3</button>
-    <button class="answer" id = btn4>Answer 4</button>
-    <div class="answers"></div>
-    <button class="next">Next</button>
+      <button class="close-btn">X</button>
+      <h2 class="country-name"><span class="country-flag">🇱🇨</span> Temp - St. Lucia <span class="country-flag">🇱🇨</span>
+      </h2>
+      <button class="answer" id = btn1>Answer 1</button>
+      <button class="answer" id = btn2>Answer 2</button>
+      <button class="answer" id = btn3>Answer 3</button>
+      <button class="answer" id = btn4>Answer 4</button>
+      <div class="answers"></div>
+      <button class="next">Next</button>
   </div>
 
   <div class="results">
-    <h2 class="results">You Lose!</h2>
+    <h2>You Lose!</h2>
     <p class="num-correct">Correct answers: 12 out of 20</p>
     <p class="percentage-correct">Percentage of correct answers: <span id="correct">65%</span></p>
 
