--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <button class = "region-btn" id = "south-america">South America</button>
       <button class = "region-btn" id = "middle-east-africa">Middle East and Africa</button>
       <button class = "region-btn" id = "oceania">Oceania</button>
+      </br>
+      </br>
       <button class = "play-btn">Play</button>
   </div>
 
@@ -33,8 +35,8 @@
       <button class="close-btn">X</button>
       <h2 class="country-name"><span class="country-flag">🇱🇨</span> Temp - St. Lucia <span class="country-flag">🇱🇨</span>
       </h2>
-      <button class="answer" id = btn1>Answer 1</button>
-      <button class="answer" id = btn2>Answer 2</button>
+      <button class="answer " id = btn1>Answer 1</button>
+      <button class="answer " id = btn2>Answer 2</button>
       <button class="answer" id = btn3>Answer 3</button>
       <button class="answer" id = btn4>Answer 4</button>
       <div class="answers"></div>
@@ -42,7 +44,7 @@
   </div>
 
   <div class="results">
-    <h2>You Lose!</h2>
+    <h2>You Either Won or Lost!</h2>
     <p class="num-correct">Correct answers: 12 out of 20</p>
     <p class="percentage-correct">Percentage of correct answers: <span id="correct">65%</span></p>
 
