--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
       <button class="close-btn">X</button>
       <h2 class="country-name"><span class="country-flag">🇱🇨</span> Temp - St. Lucia <span class="country-flag">🇱🇨</span>
       </h2>
-      <button class="answer" id = btn1>Answer 1</button>
-      <button class="answer" id = btn2>Answer 2</button>
-      <button class="answer" id = btn3>Answer 3</button>
-      <button class="answer" id = btn4>Answer 4</button>
-      <div class="answers"></div>
+      <div class="answers">
+      <button class="answers" id = btn1>Answer 1</button>
+      <button class="answers" id = btn2>Answer 2</button>
+      <button class="answers" id = btn3>Answer 3</button>
+      <button class="answers" id = btn4>Answer 4</button>
+      </div>
       <button class="next">Next</button>
   </div>
 
