--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
   </div>
 
   <div class="results">
-    <h2>You Either Won or Lost!</h2>
-    <p class="num-correct">Correct answers: 12 out of 20</p>
-    <p class="percentage-correct">Percentage of correct answers: <span id="correct">65%</span></p>
+    <h2 id="win-lose">You Either Won or Lost!</h2>
+    <p class="num-correct">Correct answers: <span id = "count">12</span> out of <span id = "total">10</span></p>
+    <p class="%-correct">Percentage of correct answers: <span id="percentage-correct">65%</span></p>
 
     <button class="play-again">Play Again</button>
 
