added additional countries, moved old js folder into temp

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
 
-  <script src="/javascript/script.js" type="module"></script>
-  <script src="/javascript/countries.js" type="module"></script>
+  <script src="/javascript-v2/script.js" type="module"></script>
+  <script src="/javascript-v2/countries.js" type="module"></script>
+ 
   <!-- <script src="data/parseAPI_data.js" type="module"></script> -->
   <link rel="stylesheet" href="/styles/styles.css">
   
@@ -18,8 +19,8 @@
   <div class="main-menu">
       <h1>🌎 World Leader Quiz 🌎</h1>
       <div class="intro-paragraph">
-      <p id="p1">Welcome to World Leader Quiz! Do you know them all? </p>
-      <p id="p2">Select a region and click <strong>Play</strong> to start the game</p>
+      <p id="p1">Welcome to World Leader Quiz! Select a region and click <strong>Play</strong> to start the game</p>
+      </br>
       </div>
     <div class="main-menu region-buttons">
       <button class = "region-btn" id = "asia">Asia</button>
@@ -32,6 +33,10 @@
       </br>
       </br>
     <div class="div-play"> <button class = "play-btn">Play</button></div>
+    <div class="error-message">
+      <p>Please select a region</p>
+    </div>
+
   </div>
 
   <div class="card-view">
