--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
   </div>
 
   <div class="card-view">
-      <button class="close-btn">X</button>
+      <div class="close">
+      <button class="close-btn">Close</button>
+      </div>
       <h2 class="country-name"><span class="country-flag">🇱🇨</span> Temp - St. Lucia <span class="country-flag">🇱🇨</span>
       </h2>
       <div class="answers">
@@ -48,9 +50,10 @@
       <button class="answers" id = btn2>Answer 2</button>
       <button class="answers" id = btn3>Answer 3</button>
       <button class="answers" id = btn4>Answer 4</button>
-      <button class="next">Next</button>
       </div>
-     
+      <div class="next">
+      <button class="next-btn">Next</button>
+      </div>
   </div>
 
   <div class="results">
