updated js  and CSS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <script src="/javascript-v2/script.js" type="module"></script>
   <script src="/javascript-v2/countries.js" type="module"></script>
- 
+ <!--  -->
   <!-- <script src="data/parseAPI_data.js" type="module"></script> -->
   <link rel="stylesheet" href="/styles/styles.css">
   
@@ -45,14 +45,14 @@
       </div>
       <h2 class="country-name"><span class="country-flag">🇱🇨</span> Temp - St. Lucia <span class="country-flag">🇱🇨</span>
       </h2>
-      <div class="answers">
+      <div class="answers-grid">
       <button class="answers" id = btn1>Answer 1</button>
       <button class="answers" id = btn2>Answer 2</button>
       <button class="answers" id = btn3>Answer 3</button>
       <button class="answers" id = btn4>Answer 4</button>
       </div>
       <div class="next">
-      <button class="next-btn">Next</button>
+      <button class="next-btn" id="next">Next</button>
       </div>
   </div>
 
