updated css and js

--- a/index.html
+++ b/index.html
@@ -40,29 +40,29 @@
   </div>
 
   <div class="card-view">
-      <div class="close">
-      <button class="close-btn">Close</button>
-      </div>
-      <h2 class="country-name"><span class="country-flag">🇱🇨</span> Temp - St. Lucia <span class="country-flag">🇱🇨</span>
-      </h2>
-      <div class="answers-grid">
-      <button class="answers" id = btn1>Answer 1</button>
-      <button class="answers" id = btn2>Answer 2</button>
-      <button class="answers" id = btn3>Answer 3</button>
-      <button class="answers" id = btn4>Answer 4</button>
-      </div>
-      <div class="next">
-      <button class="next-btn" id="next">Next</button>
-      </div>
-  </div>
-
+    <div class="close">
+    <button class="close-btn">Close</button>
+    </div>
+    <h2 class="country-name"><span class="country-flag">🇱🇨</span> Temp - St. Lucia <span class="country-flag">🇱🇨</span>
+    </h2>
+    <div class="answers-grid">
+    <button class="answers" id = btn1>Answer 1</button>
+    <button class="answers" id = btn2>Answer 2</button>
+    <button class="answers" id = btn3>Answer 3</button>
+    <button class="answers" id = btn4>Answer 4</button>
+    </div>
+    <div class="next">
+    <button class="next-btn" id="next">Next</button>
+    </div>
+</div>
   <div class="results">
     <h2 id="win-lose">You Either Won or Lost!</h2>
-    <p class="num-correct">Correct answers: <span id = "count">12</span> out of <span id = "total">10</span></p>
-    <p class="%-correct">Percentage of correct answers: <span id="percentage-correct">65%</span></p>
-
+    <div>
+    <h3 class="num-correct">Correct answers: <span id = "count">12</span> out of <span id = "total">10</span></h3>
+    <h3 class="%-correct">Percentage of correct answers: <span id="percentage-correct">65%</span></h3>
+    <div class ="play-again-btn">
     <button class="play-again">Play Again</button>
-
+    </div>
   </div>
 </main>
 </body>
