removed console logs, changed spacing on menu render

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body> 
 <main>
   <div class="main-menu">
-      <h1>🌎 World Leader Quiz 🌎</h1>
+      <h1>🌎 &nbsp;World Leader Quiz&nbsp; 🌎</h1>
       <div class="intro-paragraph">
       <p id="p1">Welcome to World Leader Quiz! Select a region and click <strong>Play</strong> to start the game</p>
       </br>
