--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="/styles/styles.css">
   
   <title>World Leader Quiz by Stephen Kelly</title>
+  <link rel="shortcut icon" type="image/jpg" href="./images/globe-showing-americas.jpg"/>
 </head>
 <body> 
 <main>
