--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="/styles/styles.css">
   
   <title>World Leader Quiz by Stephen Kelly</title>
-  <link rel="shortcut icon" type="image/jpg" href="./images/globe-showing-americas.jpg"/>
+  <link rel="shortcut icon" type="image/jpg" href="./images/globe-showing-americas-v1.png"/>
 </head>
 <body> 
 <main>
