--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <button class = "region-btn" id = "oceania">Oceania</button>
     </div>
       </br>
-    <div class="div-play"> <button class = "play-btn">Play</button></div>
+    <div class="div-play"> <button class = "play-btn" id="play">Play</button></div>
     <div class="error-message">
       <p>Error: Please select a region</p>
     </div>
